# leptos-spin

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release-leptos-spin-macro.yml  release-leptos-spin.yml  release.yml
leptos-spin/: Cargo.toml  README.md
leptos-spin-macro/: Cargo.toml
leptos-spin-macro/src/: lib.rs
leptos-spin/src/: incoming_request.rs  lib.rs  request.rs  request_parts.rs  response.rs  response_options.rs  route_table.rs  server_fn.rs
leptos-spin/templates/leptos-ssr/content/src/: app.rs  server.rs
leptos-spin/templates/leptos-ssr/metadata/: spin-template.toml
src/: lib.rs  request_parts.rs  response_options.rs
templates/leptos-ssr/content/: Cargo.toml  Cargo.toml.template  Cargo.toml.tmpl  README.md  spin.toml
templates/leptos-ssr/content/src/: app.rs  lib.rs  main.rs  server.rs
templates/leptos-ssr/metadata/: spin-template.toml
templates/leptos-ssr/metadata/snippets/: component.txt
