[package]
name = "leptos-spin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
leptos = { version = "0.5.6", features = ["ssr", "spin"] }
leptos_integration_utils = { version = "0.5.6" }
leptos_meta = { version = "0.5.6", features = ["ssr"] }
leptos_router = { version = "0.5.6", features = ["ssr"] }
routefinder = { version = "0.5.3" }
spin-sdk = "2.1"
tracing = "0.1.40"
url = "2.4.1"

[features]
nonce = ["leptos/nonce"]
experimental-islands = ["leptos_integration_utils/experimental-islands"]
