[workspace]
resolver = "2"

members = [
    "leptos-spin",
    "leptos-spin-macro"
]
exclude = [
    "templates/leptos-ssr/content",
]


[patch.crates-io]
leptos = { path = '../leptos/leptos' }
leptos_config = { path = '../leptos/leptos_config' }
leptos_meta = { path = '../leptos/meta' }
leptos_router = { path = '../leptos/router' }
leptos_integration_utils = { path = '../leptos/integrations/utils' }
