[package]
name = "leptos-spin-macro"
version = "0.2.0"
edition = "2021"
description = "Spin support for Leptos"
license = "Apache-2.0"
homepage = "https://github.com/fermyon/leptos-spin"

[lib]
proc-macro = true

[dependencies]
http = "1.0.0"
proc-macro-error = "1.0.4"
server_fn_macro = "0.6.3"
syn = "2.0.48"

[features]
nightly = ["server_fn_macro/nightly"]
ssr = ["server_fn_macro/ssr"]
actix = ["server_fn_macro/actix"]
axum = ["server_fn_macro/axum"]

