[package]
name = "{{project-name | kebab_case}}"
authors = ["itowlson <ivan.towlson@fermyon.com>", "Darwin Boersma <darwin@sadlark.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.7.0-rc1" }
leptos_meta = { version = "0.7.0-rc1" }
leptos_router = { version = "0.7.0-rc1" }
leptos_wasi = { git = "https://github.com/leptos-rs/leptos_wasi", rev = "249cf889b193785621170089b5fa964d47a43eea", optional = true }
spin-sdk = { version = "3", optional = true }
# TODO: https://github.com/fermyon/spin/issues/2928, in meantime temporarily locking this to specific `wasi` crate minor version
wasi = { version = "=0.13.2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[workspace]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos_wasi",
  "dep:wasi",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "{{project-name | snake_case}}"
style-file = "style/main.scss"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
